[tool.poetry]
name = "pubmed_paper_fetcher"
version = "0.1.0"
description = "A tool to fetch and summarize PubMed research papers using LLM."
authors = ["Ahmed Kadiwala <kadiwalaahmed7864@gmail.com>"]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
